# rust2sprint

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
commons/: Cargo.toml
commons/src/: errors.rs  lib.rs  models.rs  randomizer.rs  traits.rs  utils.rs
macros/: Cargo.toml
macros/src/: lib.rs
quote_client/: Cargo.toml
quote_client/src/: cli.rs  config.rs  main.rs  udp.rs
quote_server/: Cargo.toml
quote_server/src/: channels.rs  cli.rs  config.rs  data.rs  generator.rs  main.rs  models.rs  tcp.rs  udp.rs  utils.rs
